# FlaskTrain

./: README.md  main.py  pyproject.toml
templates/: branch.html  fun.html  home.html  shop.html
