[tool.poetry]
name = "flasktrain"
version = "0.1.0"
description = ""
authors = ["Alexander-Zaychenko <alexzay2012@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
